cmake_minimum_required (VERSION 3.0)

project (OpenFOAM)

add_definitions(-DWM_LABEL_SIZE=64 -DWM_DP)

include_directories(../)

set(SOURCE_FILES
algorithms/dynamicIndexedOctree/dynamicIndexedOctree.cpp
algorithms/dynamicIndexedOctree/dynamicIndexedOctreeName.cpp
algorithms/dynamicIndexedOctree/dynamicTreeDataPoint.cpp
algorithms/indexedOctree/indexedOctree.cpp
algorithms/indexedOctree/indexedOctreeName.cpp
algorithms/indexedOctree/treeDataCell.cpp
algorithms/indexedOctree/volumeType.cpp
containers/Dictionaries/Dictionary/Dictionary.cpp
containers/Dictionaries/DictionaryBase/DictionaryBase.cpp
containers/Dictionaries/DictionaryBase/DictionaryBaseIO.cpp
containers/Dictionaries/PtrDictionary/PtrDictionary.cpp
containers/Dictionaries/PtrListDictionary/PtrListDictionary.cpp
containers/Dictionaries/UDictionary/UDictionary.cpp
containers/Dictionaries/UPtrDictionary/UPtrDictionary.cpp
containers/HashTables/HashPtrTable/HashPtrTable.cpp
containers/HashTables/HashPtrTable/HashPtrTableIO.cpp
containers/HashTables/HashSet/HashSet.cpp
containers/HashTables/HashTable/HashTable.cpp
containers/HashTables/HashTable/HashTableCore.cpp
containers/HashTables/HashTable/HashTableIO.cpp
containers/HashTables/StaticHashTable/StaticHashTable.cpp
containers/HashTables/StaticHashTable/StaticHashTableCore.cpp
containers/HashTables/StaticHashTable/StaticHashTableIO.cpp
containers/LinkedLists/accessTypes/ILList/ILList.cpp
containers/LinkedLists/accessTypes/ILList/ILListIO.cpp
containers/LinkedLists/accessTypes/LList/LList.cpp
containers/LinkedLists/accessTypes/LList/LListIO.cpp
containers/LinkedLists/accessTypes/LPtrList/LPtrList.cpp
containers/LinkedLists/accessTypes/LPtrList/LPtrListIO.cpp
containers/LinkedLists/accessTypes/UILList/UILList.cpp
containers/LinkedLists/accessTypes/UILList/UILListIO.cpp
containers/LinkedLists/linkTypes/DLListBase/DLListBase.cpp
containers/LinkedLists/linkTypes/SLListBase/SLListBase.cpp
containers/Lists/BinSum/BinSum.cpp
containers/Lists/CompactListList/CompactListList.cpp
containers/Lists/CompactListList/CompactListListIO.cpp
containers/Lists/Distribution/Distribution.cpp
containers/Lists/DynamicList/DynamicList.cpp
containers/Lists/FixedList/FixedList.cpp
containers/Lists/FixedList/FixedListIO.cpp
containers/Lists/Histogram/Histogram.cpp
containers/Lists/List/List.cpp
containers/Lists/List/ListIO.cpp
containers/Lists/ListListOps/ListListOps.cpp
containers/Lists/ListOps/ListOps.cpp
containers/Lists/ListOps/ListOpsTemplates.cpp
containers/Lists/PackedList/PackedBoolList.cpp
containers/Lists/PackedList/PackedList.cpp
containers/Lists/PackedList/PackedListCore.cpp
containers/Lists/PtrList/PtrList.cpp
containers/Lists/PtrList/PtrListIO.cpp
containers/Lists/SortableList/ParSortableList.cpp
containers/Lists/SortableList/ParSortableListName.cpp
containers/Lists/SortableList/SortableList.cpp
containers/Lists/UIndirectList/UIndirectListIO.cpp
containers/Lists/UList/UList.cpp
containers/Lists/UList/UListIO.cpp
containers/Lists/UPtrList/UPtrList.cpp
containers/Lists/UPtrList/UPtrListIO.cpp
containers/NamedEnum/NamedEnum.cpp
db/Callback/Callback.cpp
db/CallbackRegistry/CallbackRegistry.cpp
db/CallbackRegistry/CallbackRegistryName.cpp
db/dictionary/dictionaryEntry/dictionaryEntry.cpp
db/dictionary/dictionaryEntry/dictionaryEntryIO.cpp
db/dictionary/dictionaryListEntry/dictionaryListEntry.cpp
db/dictionary/dictionaryListEntry/dictionaryListEntryIO.cpp
db/dictionary/entry/entry.cpp
db/dictionary/entry/entryIO.cpp
db/dictionary/functionEntries/calcEntry/calcEntry.cpp
db/dictionary/functionEntries/codeStream/codeStream.cpp
db/dictionary/functionEntries/functionEntry/functionEntry.cpp
db/dictionary/functionEntries/includeEntry/includeEntry.cpp
db/dictionary/functionEntries/includeEtcEntry/includeEtcEntry.cpp
db/dictionary/functionEntries/includeFuncEntry/includeFuncEntry.cpp
db/dictionary/functionEntries/includeIfPresentEntry/includeIfPresentEntry.cpp
db/dictionary/functionEntries/inputModeEntry/inputModeEntry.cpp
db/dictionary/functionEntries/removeEntry/removeEntry.cpp
db/dictionary/primitiveEntry/primitiveEntry.cpp
db/dictionary/primitiveEntry/primitiveEntryIO.cpp
db/dictionary/primitiveEntry/primitiveEntryTemplates.cpp
db/dictionary/dictionary.cpp
db/dictionary/dictionaryIO.cpp
db/dictionary/dictionaryTemplates.cpp
db/dynamicLibrary/codedBase/codedBase.cpp
db/dynamicLibrary/dlLibraryTable/dlLibraryTable.cpp
db/dynamicLibrary/dlLibraryTable/dlLibraryTableTemplates.cpp
db/dynamicLibrary/dynamicCode/dynamicCode.cpp
db/dynamicLibrary/dynamicCode/dynamicCodeContext.cpp
#db/error/error.cpp
#db/error/IOerror.cpp
#db/error/messageStream.cpp
db/functionObjects/functionObject/functionObject.cpp
db/functionObjects/functionObjectList/functionObjectList.cpp
db/functionObjects/IOOutputFilter/IOOutputFilter.cpp
db/functionObjects/logFiles/logFiles.cpp
db/functionObjects/regionFunctionObject/regionFunctionObject.cpp
db/functionObjects/regionFunctionObject/regionFunctionObjectTemplates.cpp
db/functionObjects/timeControl/timeControl.cpp
db/functionObjects/timeControl/timeControlFunctionObject.cpp
db/functionObjects/writeFile/writeFile.cpp
db/functionObjects/writeFile/writeFileTemplates.cpp
db/functionObjects/writeLocalObjects/writeLocalObjects.cpp
db/functionObjects/writeObjectsBase/writeObjectsBase.cpp
db/IOobject/IOobject.cpp
db/IOobject/IOobjectIO.cpp
db/IOobject/IOobjectReadHeader.cpp
db/IOobject/IOobjectTemplates.cpp
db/IOobject/IOobjectWriteHeader.cpp
db/IOobjectList/IOobjectList.cpp
db/IOobjects/CompactIOField/CompactIOField.cpp
db/IOobjects/CompactIOList/CompactIOList.cpp
db/IOobjects/decomposedBlockData/decomposedBlockData.cpp
db/IOobjects/GlobalIOField/GlobalIOField.cpp
db/IOobjects/GlobalIOField/GlobalIOFields.cpp
db/IOobjects/GlobalIOList/GlobalIOList.cpp
db/IOobjects/GlobalIOList/globalIOLists.cpp
db/IOobjects/IOdictionary/baseIOdictionary.cpp
db/IOobjects/IOdictionary/baseIOdictionaryIO.cpp
db/IOobjects/IOdictionary/IOdictionary.cpp
db/IOobjects/IOdictionary/IOdictionaryIO.cpp
db/IOobjects/IOdictionary/localIOdictionary.cpp
db/IOobjects/IOdictionary/unwatchedIOdictionary.cpp
db/IOobjects/IOField/IOField.cpp
db/IOobjects/IOList/IOList.cpp
db/IOobjects/IOMap/IOMap.cpp
db/IOobjects/IOMap/IOMapName.cpp
db/IOobjects/IOPtrList/IOPtrList.cpp
db/IOstreams/Fstreams/IFstream.cpp
db/IOstreams/Fstreams/masterOFstream.cpp
db/IOstreams/Fstreams/OFstream.cpp
db/IOstreams/gzstream/gzstream.cpp
db/IOstreams/IOstreams/IOstream.cpp
db/IOstreams/IOstreams/Istream.cpp
db/IOstreams/IOstreams/Ostream.cpp
db/IOstreams/Pstreams/combineGatherScatter.cpp
db/IOstreams/Pstreams/exchange.cpp
db/IOstreams/Pstreams/gatherScatter.cpp
db/IOstreams/Pstreams/gatherScatterList.cpp
db/IOstreams/Pstreams/IPstream.cpp
db/IOstreams/Pstreams/OPstream.cpp
db/IOstreams/Pstreams/Pstream.cpp
db/IOstreams/Pstreams/PstreamBuffers.cpp
db/IOstreams/Pstreams/UIPstream.cpp
db/IOstreams/Pstreams/UOPstream.cpp
#db/IOstreams/Pstreams/UPstream.cpp
db/IOstreams/Pstreams/UPstreamCommsStruct.cpp
db/IOstreams/Sstreams/ISstream.cpp
db/IOstreams/Sstreams/OSstream.cpp
db/IOstreams/Sstreams/prefixOSstream.cpp
db/IOstreams/Sstreams/ReadHex.cpp
db/IOstreams/Sstreams/readHexLabel.cpp
db/IOstreams/Sstreams/SstreamsPrint.cpp
db/IOstreams/StringStreams/StringStreamsPrint.cpp
#db/IOstreams/token/token.cpp
db/IOstreams/token/tokenIO.cpp
db/IOstreams/Tstreams/ITstream.cpp
#db/IOstreams/IOstreams.cpp
db/objectRegistry/objectRegistry.cpp
db/objectRegistry/objectRegistryTemplates.cpp
#db/regIOobject/regIOobject.cpp
db/regIOobject/regIOobjectRead.cpp
db/regIOobject/regIOobjectWrite.cpp
db/Time/instant/instant.cpp
db/Time/findTimes.cpp
db/Time/subCycleTime.cpp
db/Time/Time.cpp
db/Time/TimeIO.cpp
db/Time/TimePaths.cpp
db/Time/timeSelector.cpp
db/Time/TimeState.cpp
dimensionedTypes/dimensionedScalar/dimensionedScalar.cpp
dimensionedTypes/dimensionedSphericalTensor/dimensionedSphericalTensor.cpp
dimensionedTypes/dimensionedSymmTensor/dimensionedSymmTensor.cpp
dimensionedTypes/dimensionedTensor/dimensionedTensor.cpp
dimensionedTypes/dimensionedType/dimensionedType.cpp
dimensionSet/dimensionSet.cpp
dimensionSet/dimensionSetIO.cpp
dimensionSet/dimensionSets.cpp
fields/cloud/cloud.cpp
fields/DimensionedFields/DimensionedField/DimensionedField.cpp
fields/DimensionedFields/DimensionedField/DimensionedFieldFunctions.cpp
#fields/DimensionedFields/DimensionedField/DimensionedFieldFunctionsM.cpp
fields/DimensionedFields/DimensionedField/DimensionedFieldIO.cpp
fields/DimensionedFields/DimensionedScalarField/DimensionedScalarField.cpp
fields/DimensionedFields/DimensionedSphericalTensorField/DimensionedSphericalTensorField.cpp
fields/DimensionedFields/DimensionedSymmTensorField/DimensionedSymmTensorField.cpp
fields/DimensionedFields/DimensionedTensorField/DimensionedTensorField.cpp
fields/FieldFields/FieldField/FieldField.cpp
fields/FieldFields/FieldField/FieldFieldFunctions.cpp
#fields/FieldFields/FieldField/FieldFieldFunctionsM.cpp
fields/FieldFields/scalarFieldField/scalarFieldField.cpp
fields/FieldFields/sphericalTensorFieldField/sphericalTensorFieldField.cpp
fields/FieldFields/symmTensorFieldField/symmTensorFieldField.cpp
fields/FieldFields/tensorFieldField/tensorFieldField.cpp
fields/FieldFields/transformFieldField/transformFieldField.cpp
fields/Fields/complexFields/complexFields.cpp
fields/Fields/diagTensorField/diagTensorField.cpp
fields/Fields/diagTensorField/diagTensorFieldIOField.cpp
fields/Fields/diagTensorField/diagTensorIOField.cpp
fields/Fields/DynamicField/DynamicField.cpp
fields/Fields/Field/Field.cpp
fields/Fields/Field/FieldFunctions.cpp
#fields/Fields/Field/FieldFunctionsM.cpp
fields/Fields/labelField/labelField.cpp
fields/Fields/labelField/labelFieldIOField.cpp
fields/Fields/labelField/labelIOField.cpp
fields/Fields/quaternionField/quaternionField.cpp
fields/Fields/quaternionField/quaternionIOField.cpp
fields/Fields/scalarField/scalarField.cpp
fields/Fields/scalarField/scalarFieldIOField.cpp
fields/Fields/scalarField/scalarIOField.cpp
fields/Fields/sphericalTensorField/sphericalTensorField.cpp
fields/Fields/sphericalTensorField/sphericalTensorFieldIOField.cpp
fields/Fields/sphericalTensorField/sphericalTensorIOField.cpp
fields/Fields/symmTensorField/symmTensorField.cpp
fields/Fields/symmTensorField/symmTensorFieldIOField.cpp
fields/Fields/symmTensorField/symmTensorIOField.cpp
fields/Fields/symmTransformField/symmTransformField.cpp
fields/Fields/tensorField/tensorField.cpp
fields/Fields/tensorField/tensorFieldIOField.cpp
fields/Fields/tensorField/tensorIOField.cpp
fields/Fields/transformField/transformField.cpp
fields/Fields/transformField/transformFieldTemplates.cpp
fields/Fields/transformList/transformList.cpp
fields/Fields/triadField/triadField.cpp
fields/Fields/triadField/triadIOField.cpp
fields/Fields/vector2DField/vector2DField.cpp
fields/Fields/vector2DField/vector2DFieldIOField.cpp
fields/Fields/vector2DField/vector2DIOField.cpp
fields/Fields/vectorField/vectorField.cpp
fields/Fields/vectorField/vectorFieldIOField.cpp
fields/Fields/vectorField/vectorIOField.cpp
fields/GeometricFields/GeometricField/GeometricBoundaryField.cpp
fields/GeometricFields/GeometricField/GeometricField.cpp
fields/GeometricFields/GeometricField/GeometricFieldFunctions.cpp
#fields/GeometricFields/GeometricField/GeometricFieldFunctionsM.cpp
fields/GeometricFields/GeometricField/uniformInterpolate.cpp
fields/GeometricFields/GeometricScalarField/GeometricScalarField.cpp
fields/GeometricFields/GeometricSphericalTensorField/GeometricSphericalTensorField.cpp
fields/GeometricFields/GeometricSymmTensorField/GeometricSymmTensorField.cpp
fields/GeometricFields/GeometricTensorField/GeometricTensorField.cpp
fields/GeometricFields/pointFields/pointFields.cpp
fields/GeometricFields/SlicedGeometricField/SlicedGeometricField.cpp
fields/GeometricFields/transformGeometricField/transformGeometricField.cpp
fields/pointPatchFields/basic/basicSymmetry/basicSymmetryPointPatchField.cpp
fields/pointPatchFields/basic/calculated/calculatedPointPatchField.cpp
fields/pointPatchFields/basic/calculated/calculatedPointPatchFields.cpp
fields/pointPatchFields/basic/coupled/coupledPointPatchField.cpp
fields/pointPatchFields/basic/coupled/coupledPointPatchFields.cpp
fields/pointPatchFields/basic/fixedValue/fixedValuePointPatchField.cpp
fields/pointPatchFields/basic/fixedValue/fixedValuePointPatchFields.cpp
fields/pointPatchFields/basic/value/valuePointPatchField.cpp
fields/pointPatchFields/basic/value/valuePointPatchFields.cpp
fields/pointPatchFields/basic/zeroGradient/zeroGradientPointPatchField.cpp
fields/pointPatchFields/basic/zeroGradient/zeroGradientPointPatchFields.cpp
fields/pointPatchFields/constraint/cyclic/cyclicPointPatchField.cpp
fields/pointPatchFields/constraint/cyclic/cyclicPointPatchFields.cpp
fields/pointPatchFields/constraint/cyclicSlip/cyclicSlipPointPatchField.cpp
fields/pointPatchFields/constraint/cyclicSlip/cyclicSlipPointPatchFields.cpp
fields/pointPatchFields/constraint/empty/emptyPointPatchField.cpp
fields/pointPatchFields/constraint/empty/emptyPointPatchFields.cpp
fields/pointPatchFields/constraint/nonuniformTransformCyclic/nonuniformTransformCyclicPointPatchField.cpp
fields/pointPatchFields/constraint/nonuniformTransformCyclic/nonuniformTransformCyclicPointPatchFields.cpp
fields/pointPatchFields/constraint/processor/processorPointPatchField.cpp
fields/pointPatchFields/constraint/processor/processorPointPatchFields.cpp
fields/pointPatchFields/constraint/processorCyclic/processorCyclicPointPatchField.cpp
fields/pointPatchFields/constraint/processorCyclic/processorCyclicPointPatchFields.cpp
fields/pointPatchFields/constraint/symmetry/symmetryPointPatchField.cpp
fields/pointPatchFields/constraint/symmetry/symmetryPointPatchFields.cpp
fields/pointPatchFields/constraint/symmetryPlane/symmetryPlanePointPatchField.cpp
fields/pointPatchFields/constraint/symmetryPlane/symmetryPlanePointPatchFields.cpp
fields/pointPatchFields/constraint/wedge/wedgePointPatchField.cpp
fields/pointPatchFields/constraint/wedge/wedgePointPatchFields.cpp
fields/pointPatchFields/derived/codedFixedValue/codedFixedValuePointPatchField.cpp
fields/pointPatchFields/derived/codedFixedValue/codedFixedValuePointPatchFields.cpp
fields/pointPatchFields/derived/fixedNormalSlip/fixedNormalSlipPointPatchField.cpp
fields/pointPatchFields/derived/fixedNormalSlip/fixedNormalSlipPointPatchFields.cpp
fields/pointPatchFields/derived/slip/slipPointPatchField.cpp
fields/pointPatchFields/derived/slip/slipPointPatchFields.cpp
fields/pointPatchFields/derived/timeVaryingUniformFixedValue/timeVaryingUniformFixedValuePointPatchField.cpp
fields/pointPatchFields/derived/timeVaryingUniformFixedValue/timeVaryingUniformFixedValuePointPatchFields.cpp
fields/pointPatchFields/derived/uniformFixedValue/uniformFixedValuePointPatchField.cpp
fields/pointPatchFields/derived/uniformFixedValue/uniformFixedValuePointPatchFields.cpp
fields/pointPatchFields/pointPatchField/pointPatchField.cpp
fields/pointPatchFields/pointPatchField/pointPatchFieldNew.cpp
fields/pointPatchFields/pointPatchField/pointPatchFields.cpp
fields/ReadFields/ReadFields.cpp
fields/UniformDimensionedFields/UniformDimensionedField.cpp
fields/UniformDimensionedFields/uniformDimensionedFields.cpp
global/argList/argList.cpp
global/clock/clock.cpp
#global/constants/atomic/atomicConstants.cpp
#global/constants/electromagnetic/electromagneticConstants.cpp
#global/constants/fundamental/fundamentalConstants.cpp
#global/constants/physicoChemical/physicoChemicalConstants.cpp
#global/constants/thermodynamic/thermodynamicConstants.cpp
#global/constants/universal/universalConstants.cpp
#global/constants/constants.cpp
#global/constants/dimensionedConstants.cpp
#global/debug/debug.cpp
global/etcFiles/etcFiles.cpp
global/fileOperations/collatedFileOperation/collatedFileOperation.cpp
global/fileOperations/collatedFileOperation/hostCollatedFileOperation.cpp
global/fileOperations/collatedFileOperation/OFstreamCollator.cpp
global/fileOperations/collatedFileOperation/threadedCollatedOFstream.cpp
global/fileOperations/fileOperation/fileOperation.cpp
global/fileOperations/fileOperationInitialise/fileOperationInitialise.cpp
global/fileOperations/masterUncollatedFileOperation/masterUncollatedFileOperation.cpp
global/fileOperations/masterUncollatedFileOperation/masterUncollatedFileOperationTemplates.cpp
global/fileOperations/uncollatedFileOperation/uncollatedFileOperation.cpp
global/jobInfo/jobInfo.cpp
global/globalver.cpp
#global/new.cpp
graph/curve/curve.cpp
graph/curve/curveTools.cpp
graph/writers/gnuplotGraph/gnuplotGraph.cpp
graph/writers/jplotGraph/jplotGraph.cpp
graph/writers/rawGraph/rawGraph.cpp
graph/writers/xmgrGraph/xmgrGraph.cpp
graph/graph.cpp
interpolations/interpolatePointToCell/interpolatePointToCell.cpp
interpolations/interpolateSplineXY/interpolateSplineXY.cpp
interpolations/interpolateXY/interpolateXY.cpp
interpolations/interpolation2DTable/interpolation2DTable.cpp
interpolations/interpolationLookUpTable/interpolationLookUpTable.cpp
interpolations/interpolationTable/tableReaders/csv/csvTableReader.cpp
interpolations/interpolationTable/tableReaders/csv/csvTableReaders.cpp
interpolations/interpolationTable/tableReaders/openFoam/openFoamTableReader.cpp
interpolations/interpolationTable/tableReaders/openFoam/openFoamTableReaders.cpp
interpolations/interpolationTable/tableReaders/tableReader.cpp
interpolations/interpolationTable/tableReaders/tableReaders.cpp
interpolations/interpolationTable/interpolationTable.cpp
interpolations/interpolationWeights/interpolationWeights/interpolationWeights.cpp
interpolations/interpolationWeights/interpolationWeights/interpolationWeightsTemplates.cpp
interpolations/interpolationWeights/linearInterpolationWeights/linearInterpolationWeights.cpp
interpolations/interpolationWeights/splineInterpolationWeights/splineInterpolationWeights.cpp
interpolations/patchToPatchInterpolation/CalcPatchToPatchWeights.cpp
interpolations/patchToPatchInterpolation/PatchToPatchInterpolate.cpp
interpolations/patchToPatchInterpolation/PatchToPatchInterpolation.cpp
interpolations/patchToPatchInterpolation/PatchToPatchInterpolationName.cpp
interpolations/primitivePatchInterpolation/PrimitivePatchInterpolation.cpp
interpolations/uniformInterpolationTable/uniformInterpolationTable.cpp
matrices/DiagonalMatrix/DiagonalMatrix.cpp
matrices/lduMatrix/lduAddressing/lduInterface/cyclicLduInterface.cpp
matrices/lduMatrix/lduAddressing/lduInterface/lduInterface.cpp
matrices/lduMatrix/lduAddressing/lduInterface/processorLduInterface.cpp
matrices/lduMatrix/lduAddressing/lduInterface/processorLduInterfaceTemplates.cpp
matrices/lduMatrix/lduAddressing/lduInterfaceFields/cyclicLduInterfaceField/cyclicLduInterfaceField.cpp
matrices/lduMatrix/lduAddressing/lduInterfaceFields/lduInterfaceField/lduInterfaceField.cpp
matrices/lduMatrix/lduAddressing/lduInterfaceFields/processorLduInterfaceField/processorLduInterfaceField.cpp
matrices/lduMatrix/lduAddressing/lduAddressing.cpp
matrices/lduMatrix/lduMatrix/lduMatrix.cpp
matrices/lduMatrix/lduMatrix/lduMatrixATmul.cpp
matrices/lduMatrix/lduMatrix/lduMatrixOperations.cpp
matrices/lduMatrix/lduMatrix/lduMatrixPreconditioner.cpp
matrices/lduMatrix/lduMatrix/lduMatrixSmoother.cpp
matrices/lduMatrix/lduMatrix/lduMatrixSolver.cpp
matrices/lduMatrix/lduMatrix/lduMatrixTemplates.cpp
matrices/lduMatrix/lduMatrix/lduMatrixUpdateMatrixInterfaces.cpp
matrices/lduMatrix/preconditioners/diagonalPreconditioner/diagonalPreconditioner.cpp
matrices/lduMatrix/preconditioners/DICPreconditioner/DICPreconditioner.cpp
matrices/lduMatrix/preconditioners/DILUPreconditioner/DILUPreconditioner.cpp
matrices/lduMatrix/preconditioners/FDICPreconditioner/FDICPreconditioner.cpp
matrices/lduMatrix/preconditioners/GAMGPreconditioner/GAMGPreconditioner.cpp
matrices/lduMatrix/preconditioners/noPreconditioner/noPreconditioner.cpp
matrices/lduMatrix/smoothers/DIC/DICSmoother.cpp
matrices/lduMatrix/smoothers/DICGaussSeidel/DICGaussSeidelSmoother.cpp
matrices/lduMatrix/smoothers/DILU/DILUSmoother.cpp
matrices/lduMatrix/smoothers/DILUGaussSeidel/DILUGaussSeidelSmoother.cpp
matrices/lduMatrix/smoothers/FDIC/FDICSmoother.cpp
matrices/lduMatrix/smoothers/GaussSeidel/GaussSeidelSmoother.cpp
matrices/lduMatrix/smoothers/nonBlockingGaussSeidel/nonBlockingGaussSeidelSmoother.cpp
matrices/lduMatrix/smoothers/symGaussSeidel/symGaussSeidelSmoother.cpp
matrices/lduMatrix/solvers/diagonalSolver/diagonalSolver.cpp
matrices/lduMatrix/solvers/GAMG/GAMGAgglomerations/algebraicPairGAMGAgglomeration/algebraicPairGAMGAgglomeration.cpp
matrices/lduMatrix/solvers/GAMG/GAMGAgglomerations/dummyAgglomeration/dummyAgglomeration.cpp
matrices/lduMatrix/solvers/GAMG/GAMGAgglomerations/GAMGAgglomeration/GAMGAgglomerateLduAddressing.cpp
matrices/lduMatrix/solvers/GAMG/GAMGAgglomerations/GAMGAgglomeration/GAMGAgglomeration.cpp
matrices/lduMatrix/solvers/GAMG/GAMGAgglomerations/GAMGAgglomeration/GAMGAgglomerationTemplates.cpp
matrices/lduMatrix/solvers/GAMG/GAMGAgglomerations/pairGAMGAgglomeration/pairGAMGAgglomerate.cpp
matrices/lduMatrix/solvers/GAMG/GAMGAgglomerations/pairGAMGAgglomeration/pairGAMGAgglomeration.cpp
matrices/lduMatrix/solvers/GAMG/GAMGProcAgglomerations/eagerGAMGProcAgglomeration/eagerGAMGProcAgglomeration.cpp
matrices/lduMatrix/solvers/GAMG/GAMGProcAgglomerations/GAMGProcAgglomeration/GAMGProcAgglomeration.cpp
matrices/lduMatrix/solvers/GAMG/GAMGProcAgglomerations/manualGAMGProcAgglomeration/manualGAMGProcAgglomeration.cpp
matrices/lduMatrix/solvers/GAMG/GAMGProcAgglomerations/masterCoarsestGAMGProcAgglomeration/masterCoarsestGAMGProcAgglomeration.cpp
matrices/lduMatrix/solvers/GAMG/GAMGProcAgglomerations/noneGAMGProcAgglomeration/noneGAMGProcAgglomeration.cpp
matrices/lduMatrix/solvers/GAMG/GAMGProcAgglomerations/procFacesGAMGProcAgglomeration/procFacesGAMGProcAgglomeration.cpp
matrices/lduMatrix/solvers/GAMG/interfaceFields/cyclicGAMGInterfaceField/cyclicGAMGInterfaceField.cpp
matrices/lduMatrix/solvers/GAMG/interfaceFields/GAMGInterfaceField/GAMGInterfaceField.cpp
matrices/lduMatrix/solvers/GAMG/interfaceFields/GAMGInterfaceField/GAMGInterfaceFieldNew.cpp
matrices/lduMatrix/solvers/GAMG/interfaceFields/processorCyclicGAMGInterfaceField/processorCyclicGAMGInterfaceField.cpp
matrices/lduMatrix/solvers/GAMG/interfaceFields/processorGAMGInterfaceField/processorGAMGInterfaceField.cpp
matrices/lduMatrix/solvers/GAMG/interfaces/cyclicGAMGInterface/cyclicGAMGInterface.cpp
matrices/lduMatrix/solvers/GAMG/interfaces/GAMGInterface/GAMGInterface.cpp
matrices/lduMatrix/solvers/GAMG/interfaces/GAMGInterface/GAMGInterfaceNew.cpp
matrices/lduMatrix/solvers/GAMG/interfaces/GAMGInterface/GAMGInterfaceTemplates.cpp
matrices/lduMatrix/solvers/GAMG/interfaces/processorCyclicGAMGInterface/processorCyclicGAMGInterface.cpp
matrices/lduMatrix/solvers/GAMG/interfaces/processorGAMGInterface/processorGAMGInterface.cpp
matrices/lduMatrix/solvers/GAMG/GAMGSolver.cpp
matrices/lduMatrix/solvers/GAMG/GAMGSolverAgglomerateMatrix.cpp
matrices/lduMatrix/solvers/GAMG/GAMGSolverInterpolate.cpp
matrices/lduMatrix/solvers/GAMG/GAMGSolverScale.cpp
matrices/lduMatrix/solvers/GAMG/GAMGSolverSolve.cpp
matrices/lduMatrix/solvers/PBiCG/PBiCG.cpp
matrices/lduMatrix/solvers/PBiCGStab/PBiCGStab.cpp
matrices/lduMatrix/solvers/PCG/PCG.cpp
matrices/lduMatrix/solvers/smoothSolver/smoothSolver.cpp
matrices/LduMatrixN/LduMatrix/LduInterfaceField/LduInterfaceField.cpp
matrices/LduMatrixN/LduMatrix/LduInterfaceField/LduInterfaceFields.cpp
matrices/LduMatrixN/LduMatrix/lduMatrices.cpp
matrices/LduMatrixN/LduMatrix/LduMatrix.cpp
matrices/LduMatrixN/LduMatrix/LduMatrixATmul.cpp
matrices/LduMatrixN/LduMatrix/LduMatrixOperations.cpp
matrices/LduMatrixN/LduMatrix/LduMatrixPreconditioner.cpp
matrices/LduMatrixN/LduMatrix/LduMatrixSmoother.cpp
matrices/LduMatrixN/LduMatrix/LduMatrixSolver.cpp
matrices/LduMatrixN/LduMatrix/LduMatrixUpdateMatrixInterfaces.cpp
matrices/LduMatrixN/LduMatrix/solverPerformance.cpp
matrices/LduMatrixN/LduMatrix/SolverPerformanceN.cpp
matrices/LduMatrixN/Preconditioners/DiagonalPreconditioner/DiagonalPreconditioner.cpp
matrices/LduMatrixN/Preconditioners/DILUPreconditioner/TDILUPreconditioner.cpp
matrices/LduMatrixN/Preconditioners/NoPreconditioner/NoPreconditioner.cpp
matrices/LduMatrixN/Preconditioners/lduPreconditioners.cpp
matrices/LduMatrixN/Smoothers/GaussSeidel/TGaussSeidelSmoother.cpp
matrices/LduMatrixN/Smoothers/lduSmoothers.cpp
matrices/LduMatrixN/Solvers/DiagonalSolver/DiagonalSolver.cpp
matrices/LduMatrixN/Solvers/PBiCCCG/PBiCCCG.cpp
matrices/LduMatrixN/Solvers/PBiCICG/PBiCICG.cpp
matrices/LduMatrixN/Solvers/PCICG/PCICG.cpp
matrices/LduMatrixN/Solvers/SmoothSolver/SmoothSolver.cpp
matrices/LduMatrixN/Solvers/lduSolvers.cpp
matrices/LLTMatrix/LLTMatrix.cpp
matrices/LUscalarMatrix/LUscalarMatrix.cpp
matrices/LUscalarMatrix/LUscalarMatrixTemplates.cpp
matrices/LUscalarMatrix/procLduInterface.cpp
matrices/LUscalarMatrix/procLduMatrix.cpp
matrices/Matrix/Matrix.cpp
matrices/Matrix/MatrixIO.cpp
matrices/MatrixBlock/MatrixBlock.cpp
matrices/QRMatrix/QRMatrix.cpp
matrices/scalarMatrices/SVD/SVD.cpp
matrices/scalarMatrices/scalarMatrices.cpp
matrices/scalarMatrices/scalarMatricesTemplates.cpp
matrices/simpleMatrix/simpleMatrix.cpp
matrices/solution/solution.cpp
matrices/solution/solutionTemplates.cpp
matrices/SquareMatrix/SquareMatrix.cpp
matrices/SymmetricSquareMatrix/SymmetricSquareMatrix.cpp
matrices/tolerances/tolerances.cpp
meshes/bandCompression/bandCompression.cpp
meshes/boundBox/boundBox.cpp
meshes/boundBox/boundBoxTemplates.cpp
meshes/data/data.cpp
meshes/data/dataTemplates.cpp
meshes/Identifiers/patch/coupleGroupIdentifier.cpp
meshes/Identifiers/patch/patchIdentifier.cpp
meshes/lduMesh/lduMesh.cpp
meshes/lduMesh/lduMeshTemplates.cpp
meshes/lduMesh/lduPrimitiveMesh.cpp
meshes/lduMesh/lduPrimitiveMeshTemplates.cpp
meshes/MeshObject/meshObject.cpp
meshes/MeshObject/MeshObjectN.cpp
meshes/meshShapes/cell/cell.cpp
meshes/meshShapes/cell/cellIOList.cpp
meshes/meshShapes/cell/oppositeCellFace.cpp
meshes/meshShapes/cellMatcher/cellMatcher.cpp
meshes/meshShapes/cellMatcher/degenerateMatcher.cpp
meshes/meshShapes/cellMatcher/hexMatcher.cpp
meshes/meshShapes/cellMatcher/prismMatcher.cpp
meshes/meshShapes/cellMatcher/pyrMatcher.cpp
meshes/meshShapes/cellMatcher/tetMatcher.cpp
meshes/meshShapes/cellMatcher/tetWedgeMatcher.cpp
meshes/meshShapes/cellMatcher/wedgeMatcher.cpp
meshes/meshShapes/cellModel/cellModel.cpp
meshes/meshShapes/cellModel/cellModelIO.cpp
meshes/meshShapes/cellModeller/cellModeller.cpp
meshes/meshShapes/cellShape/cellShape.cpp
meshes/meshShapes/cellShape/cellShapeEqual.cpp
meshes/meshShapes/cellShape/cellShapeIO.cpp
meshes/meshShapes/cellShape/cellShapeIOList.cpp
meshes/meshShapes/edge/edge.cpp
meshes/meshShapes/edge/edgeIOList.cpp
meshes/meshShapes/face/face.cpp
meshes/meshShapes/face/faceAreaInContact.cpp
meshes/meshShapes/face/faceContactSphere.cpp
meshes/meshShapes/face/faceIntersection.cpp
meshes/meshShapes/face/faceIOList.cpp
meshes/meshShapes/face/faceTemplates.cpp
meshes/meshShapes/tetCell/tetCell.cpp
meshes/meshShapes/triFace/triFaceTemplates.cpp
meshes/meshTools/matchPoints.cpp
meshes/meshTools/mergePoints.cpp
meshes/pointMesh/pointBoundaryMesh/pointBoundaryMesh.cpp
meshes/pointMesh/pointMeshMapper/pointMapper.cpp
meshes/pointMesh/pointMeshMapper/pointPatchMapper.cpp
meshes/pointMesh/pointPatches/basic/coupled/coupledPointPatch.cpp
meshes/pointMesh/pointPatches/basic/generic/genericPointPatch.cpp
meshes/pointMesh/pointPatches/constraint/cyclic/cyclicPointPatch.cpp
meshes/pointMesh/pointPatches/constraint/cyclicSlip/cyclicSlipPointPatch.cpp
meshes/pointMesh/pointPatches/constraint/empty/emptyPointPatch.cpp
meshes/pointMesh/pointPatches/constraint/nonuniformTransformCyclic/nonuniformTransformCyclicPointPatch.cpp
meshes/pointMesh/pointPatches/constraint/processor/processorPointPatch.cpp
meshes/pointMesh/pointPatches/constraint/processorCyclic/processorCyclicPointPatch.cpp
meshes/pointMesh/pointPatches/constraint/symmetry/symmetryPointPatch.cpp
meshes/pointMesh/pointPatches/constraint/symmetryPlane/symmetryPlanePointPatch.cpp
meshes/pointMesh/pointPatches/constraint/wedge/wedgePointPatch.cpp
meshes/pointMesh/pointPatches/derived/coupled/coupledFacePointPatch.cpp
meshes/pointMesh/pointPatches/derived/wall/wallPointPatch.cpp
meshes/pointMesh/pointPatches/facePointPatch/facePointPatch.cpp
meshes/pointMesh/pointPatches/facePointPatch/facePointPatchNew.cpp
meshes/pointMesh/pointPatches/pointPatch/pointPatch.cpp
meshes/pointMesh/pointMesh.cpp
meshes/polyMesh/globalMeshData/globalIndex.cpp
meshes/polyMesh/globalMeshData/globalIndexTemplates.cpp
meshes/polyMesh/globalMeshData/globalMeshData.cpp
meshes/polyMesh/globalMeshData/globalMeshDataTemplates.cpp
meshes/polyMesh/globalMeshData/globalPoints.cpp
meshes/polyMesh/mapPolyMesh/cellMapper/cellMapper.cpp
meshes/polyMesh/mapPolyMesh/faceMapper/faceMapper.cpp
meshes/polyMesh/mapPolyMesh/mapDistribute/IOmapDistribute.cpp
meshes/polyMesh/mapPolyMesh/mapDistribute/mapDistribute.cpp
meshes/polyMesh/mapPolyMesh/mapDistribute/mapDistributeBase.cpp
meshes/polyMesh/mapPolyMesh/mapDistribute/mapDistributeBaseTemplates.cpp
meshes/polyMesh/mapPolyMesh/mapDistribute/mapDistributePolyMesh.cpp
meshes/polyMesh/mapPolyMesh/mapDistribute/mapDistributeTemplates.cpp
meshes/polyMesh/mapPolyMesh/mapAddedPolyMesh.cpp
meshes/polyMesh/mapPolyMesh/mapPolyMesh.cpp
meshes/polyMesh/polyBoundaryMesh/polyBoundaryMesh.cpp
meshes/polyMesh/polyBoundaryMesh/polyBoundaryMeshEntries.cpp
meshes/polyMesh/polyBoundaryMesh/polyBoundaryMeshTemplates.cpp
meshes/polyMesh/polyMeshCheck/polyMeshCheck.cpp
meshes/polyMesh/polyMeshCheck/polyMeshTools.cpp
meshes/polyMesh/polyMeshTetDecomposition/polyMeshTetDecomposition.cpp
meshes/polyMesh/polyMeshTetDecomposition/tetIndices.cpp
meshes/polyMesh/polyPatches/basic/coupled/coupledPolyPatch.cpp
meshes/polyMesh/polyPatches/basic/generic/genericPolyPatch.cpp
meshes/polyMesh/polyPatches/constraint/cyclic/cyclicPolyPatch.cpp
meshes/polyMesh/polyPatches/constraint/cyclicSlip/cyclicSlipPolyPatch.cpp
meshes/polyMesh/polyPatches/constraint/empty/emptyPolyPatch.cpp
meshes/polyMesh/polyPatches/constraint/nonuniformTransformCyclic/nonuniformTransformCyclicPolyPatch.cpp
meshes/polyMesh/polyPatches/constraint/oldCyclic/oldCyclicPolyPatch.cpp
meshes/polyMesh/polyPatches/constraint/processor/processorPolyPatch.cpp
meshes/polyMesh/polyPatches/constraint/processorCyclic/processorCyclicPolyPatch.cpp
meshes/polyMesh/polyPatches/constraint/symmetry/symmetryPolyPatch.cpp
meshes/polyMesh/polyPatches/constraint/symmetryPlane/symmetryPlanePolyPatch.cpp
meshes/polyMesh/polyPatches/constraint/wedge/wedgePolyPatch.cpp
meshes/polyMesh/polyPatches/derived/wall/wallPolyPatch.cpp
meshes/polyMesh/polyPatches/polyPatch/polyPatch.cpp
meshes/polyMesh/polyPatches/polyPatch/polyPatchNew.cpp
meshes/polyMesh/syncTools/syncTools.cpp
meshes/polyMesh/syncTools/syncToolsTemplates.cpp
meshes/polyMesh/zones/cellZone/cellZone.cpp
meshes/polyMesh/zones/cellZone/cellZoneNew.cpp
meshes/polyMesh/zones/faceZone/faceZone.cpp
meshes/polyMesh/zones/faceZone/faceZoneNew.cpp
meshes/polyMesh/zones/pointZone/pointZone.cpp
meshes/polyMesh/zones/pointZone/pointZoneNew.cpp
meshes/polyMesh/zones/zone/zone.cpp
meshes/polyMesh/zones/ZoneMesh/ZoneMesh.cpp
meshes/polyMesh/polyMesh.cpp
meshes/polyMesh/polyMeshClear.cpp
meshes/polyMesh/polyMeshFromShapeMesh.cpp
meshes/polyMesh/polyMeshInitMesh.cpp
meshes/polyMesh/polyMeshIO.cpp
meshes/polyMesh/polyMeshUpdate.cpp
meshes/preservePatchTypes/preservePatchTypes.cpp
meshes/primitiveMesh/PatchTools/PatchTools.cpp
meshes/primitiveMesh/PatchTools/PatchToolsCheck.cpp
meshes/primitiveMesh/PatchTools/PatchToolsEdgeOwner.cpp
meshes/primitiveMesh/PatchTools/PatchToolsGatherAndMerge.cpp
meshes/primitiveMesh/PatchTools/PatchToolsMatch.cpp
meshes/primitiveMesh/PatchTools/PatchToolsNormals.cpp
meshes/primitiveMesh/PatchTools/PatchToolsSearch.cpp
meshes/primitiveMesh/PatchTools/PatchToolsSortEdges.cpp
meshes/primitiveMesh/PatchTools/PatchToolsSortPoints.cpp
meshes/primitiveMesh/primitiveMeshCheck/primitiveMeshCheck.cpp
meshes/primitiveMesh/primitiveMeshCheck/primitiveMeshCheckEdgeLength.cpp
meshes/primitiveMesh/primitiveMeshCheck/primitiveMeshCheckPointNearness.cpp
meshes/primitiveMesh/primitiveMeshCheck/primitiveMeshTools.cpp
meshes/primitiveMesh/primitivePatch/patchZones.cpp
meshes/primitiveMesh/primitivePatch/walkPatch.cpp
meshes/primitiveMesh/PrimitivePatchN/PrimitivePatch.cpp
meshes/primitiveMesh/PrimitivePatchN/PrimitivePatchAddressing.cpp
meshes/primitiveMesh/PrimitivePatchN/PrimitivePatchBdryPoints.cpp
meshes/primitiveMesh/PrimitivePatchN/PrimitivePatchCheck.cpp
meshes/primitiveMesh/PrimitivePatchN/PrimitivePatchClear.cpp
meshes/primitiveMesh/PrimitivePatchN/PrimitivePatchEdgeLoops.cpp
meshes/primitiveMesh/PrimitivePatchN/PrimitivePatchLocalPointOrder.cpp
meshes/primitiveMesh/PrimitivePatchN/PrimitivePatchMeshData.cpp
meshes/primitiveMesh/PrimitivePatchN/PrimitivePatchMeshEdges.cpp
meshes/primitiveMesh/PrimitivePatchN/PrimitivePatchName.cpp
meshes/primitiveMesh/PrimitivePatchN/PrimitivePatchPointAddressing.cpp
meshes/primitiveMesh/PrimitivePatchN/PrimitivePatchProjectPoints.cpp
meshes/primitiveMesh/primitiveMesh.cpp
meshes/primitiveMesh/primitiveMeshCalcCellShapes.cpp
meshes/primitiveMesh/primitiveMeshCellCells.cpp
meshes/primitiveMesh/primitiveMeshCellCentresAndVols.cpp
meshes/primitiveMesh/primitiveMeshCellEdges.cpp
meshes/primitiveMesh/primitiveMeshCellPoints.cpp
meshes/primitiveMesh/primitiveMeshCells.cpp
meshes/primitiveMesh/primitiveMeshClear.cpp
meshes/primitiveMesh/primitiveMeshEdgeCells.cpp
meshes/primitiveMesh/primitiveMeshEdgeFaces.cpp
meshes/primitiveMesh/primitiveMeshEdges.cpp
meshes/primitiveMesh/primitiveMeshFaceCentresAndAreas.cpp
meshes/primitiveMesh/primitiveMeshFindCell.cpp
meshes/primitiveMesh/primitiveMeshPointCells.cpp
meshes/primitiveMesh/primitiveMeshPointFaces.cpp
meshes/primitiveMesh/primitiveMeshPointPoints.cpp
meshes/primitiveShapes/cut/cutTemplates.cpp
meshes/primitiveShapes/line/line.cpp
meshes/primitiveShapes/objectHit/pointIndexHitIOList.cpp
meshes/primitiveShapes/objectHit/pointIndexHitList.cpp
meshes/primitiveShapes/plane/plane.cpp
meshes/primitiveShapes/tetrahedron/tetrahedron.cpp
meshes/primitiveShapes/triangle/intersection.cpp
meshes/ProcessorTopology/commSchedule.cpp
meshes/ProcessorTopology/ProcessorTopology.cpp
meshes/treeBoundBox/treeBoundBox.cpp
meshes/treeBoundBox/treeBoundBoxTemplates.cpp
primitives/Barycentric/barycentric/barycentric.cpp
primitives/Barycentric2D/barycentric2D/barycentric2D.cpp
primitives/bools/bool/bool.cpp
primitives/bools/bool/boolIO.cpp
primitives/bools/lists/boolList.cpp
primitives/bools/Switch/Switch.cpp
primitives/bools/Switch/SwitchIO.cpp
primitives/chars/char/charIO.cpp
primitives/chars/wchar/wcharIO.cpp
primitives/complex/complex.cpp
primitives/demandDrivenEntry/demandDrivenEntry.cpp
primitives/DiagTensor/diagTensor/diagTensor.cpp
primitives/direction/directionIO.cpp
primitives/functions/Function1/Constant/Constant.cpp
primitives/functions/Function1/CSV/CSV.cpp
primitives/functions/Function1/Function1/Function1.cpp
primitives/functions/Function1/Function1/Function1New.cpp
primitives/functions/Function1/halfCosineRamp/halfCosineRamp.cpp
primitives/functions/Function1/linearRamp/linearRamp.cpp
primitives/functions/Function1/One/OneConstant.cpp
primitives/functions/Function1/PolynomialEntry/PolynomialEntry.cpp
primitives/functions/Function1/quadraticRamp/quadraticRamp.cpp
primitives/functions/Function1/quarterCosineRamp/quarterCosineRamp.cpp
primitives/functions/Function1/quarterSineRamp/quarterSineRamp.cpp
primitives/functions/Function1/ramp/ramp.cpp
primitives/functions/Function1/Scale/Scale.cpp
primitives/functions/Function1/Sine/Sine.cpp
primitives/functions/Function1/Square/Square.cpp
primitives/functions/Function1/Table/Table.cpp
primitives/functions/Function1/Table/TableBase.cpp
primitives/functions/Function1/TableFile/TableFile.cpp
primitives/functions/Function1/Uniform/Uniform.cpp
primitives/functions/Function1/Zero/ZeroConstant.cpp
primitives/functions/Function1/makeFunction1s.cpp
primitives/functions/Polynomial/Polynomial.cpp
primitives/functions/Polynomial/polynomialFunction.cpp
primitives/functions/Polynomial/PolynomialIO.cpp
primitives/functions/TimeFunction1/TimeFunction1.cpp
primitives/globalIndexAndTransform/vectorTensorTransform/vectorTensorTransform.cpp
primitives/globalIndexAndTransform/vectorTensorTransform/vectorTensorTransformTemplates.cpp
primitives/globalIndexAndTransform/globalIndexAndTransform.cpp
primitives/hashes/Hasher/Hasher.cpp
primitives/hashes/SHA1/SHA1.cpp
primitives/hashes/SHA1/SHA1Digest.cpp
primitives/ints/int/intIO.cpp
primitives/ints/int32/int32.cpp
primitives/ints/int32/int32IO.cpp
primitives/ints/int64/int64.cpp
primitives/ints/int64/int64IO.cpp
primitives/ints/label/label.cpp
primitives/ints/lists/labelIOList.cpp
primitives/ints/lists/labelListIOList.cpp
primitives/ints/uint/uintIO.cpp
primitives/ints/uint32/uint32.cpp
primitives/ints/uint32/uint32IO.cpp
primitives/ints/uint64/uint64.cpp
primitives/ints/uint64/uint64IO.cpp
primitives/ints/uLabel/uLabel.cpp
#primitives/nullObject/nullObject.cpp
primitives/ops/flipOp.cpp
primitives/polynomialEqns/cubicEqn/cubicEqn.cpp
primitives/polynomialEqns/quadraticEqn/quadraticEqn.cpp
primitives/quaternion/quaternion.cpp
primitives/Random/Random.cpp
primitives/ranges/labelRange/labelRange.cpp
primitives/ranges/labelRange/labelRanges.cpp
primitives/ranges/scalarRange/scalarRange.cpp
primitives/ranges/scalarRange/scalarRanges.cpp
primitives/Scalar/doubleScalar/doubleScalar.cpp
primitives/Scalar/floatScalar/floatScalar.cpp
primitives/Scalar/lists/scalarIOList.cpp
primitives/Scalar/lists/scalarList.cpp
primitives/Scalar/lists/scalarListIOList.cpp
primitives/Scalar/longDoubleScalar/longDoubleScalar.cpp
primitives/Scalar/scalar/invIncGamma.cpp
primitives/Scalar/scalar/scalar.cpp
primitives/Scalar/Scalar.cpp
primitives/septernion/septernion.cpp
primitives/spatialVectorAlgebra/CompactSpatialTensor/compactSpatialTensor/compactSpatialTensor.cpp
primitives/spatialVectorAlgebra/SpatialTensor/spatialTensor/spatialTensor.cpp
primitives/spatialVectorAlgebra/SpatialVector/spatialVector/spatialVector.cpp
primitives/SphericalTensor/labelSphericalTensor/labelSphericalTensor.cpp
primitives/SphericalTensor/sphericalTensor/sphericalTensor.cpp
primitives/SphericalTensor2D/sphericalTensor2D/sphericalTensor2D.cpp
primitives/strings/fileName/fileName.cpp
primitives/strings/fileName/fileNameIO.cpp
primitives/strings/keyType/keyType.cpp
primitives/strings/lists/hashedWordList.cpp
primitives/strings/lists/stringListOpsTemplates.cpp
primitives/strings/string/string.cpp
primitives/strings/string/stringIO.cpp
primitives/strings/string/stringIOList.cpp
primitives/strings/stringOps/stringOps.cpp
primitives/strings/word/word.cpp
primitives/strings/word/wordIO.cpp
primitives/strings/word/wordIOList.cpp
primitives/strings/wordRe/wordRe.cpp
primitives/subModelBase/subModelBase.cpp
primitives/subModelBase/subModelBaseTemplates.cpp
primitives/SymmTensor/labelSymmTensor/labelSymmTensor.cpp
primitives/SymmTensor/symmTensor/symmTensor.cpp
primitives/SymmTensor2D/symmTensor2D/symmTensor2D.cpp
primitives/Tensor/floatTensor/floatTensor.cpp
primitives/Tensor/labelTensor/labelTensor.cpp
primitives/Tensor/lists/sphericalTensorList.cpp
primitives/Tensor/lists/symmTensorList.cpp
primitives/Tensor/lists/tensorList.cpp
primitives/Tensor/tensor/tensor.cpp
primitives/Tensor2D/tensor2D/tensor2D.cpp
primitives/triad/triad.cpp
primitives/Vector/complexVector/complexVector.cpp
primitives/Vector/floatVector/floatVector.cpp
primitives/Vector/labelVector/labelVector.cpp
primitives/Vector/lists/vectorIOList.cpp
primitives/Vector/lists/vectorList.cpp
primitives/Vector/lists/vectorListIOList.cpp
primitives/Vector/vector/vector.cpp
primitives/Vector2D/vector2D/vector2D.cpp
primitives/VectorSpace/VectorSpace.cpp
)

#LIB = ${FOAM_LIBBIN}/libOpenFOAM

add_library(OpenFOAM STATIC ${SOURCE_FILES})

add_custom_command(TARGET OpenFOAM
                   POST_BUILD
                   COMMAND ${CMAKE_COMMAND} -E
                   copy $<TARGET_FILE:OpenFOAM> ${CMAKE_SOURCE_DIR}/../../lib/$<TARGET_FILE_NAME:OpenFOAM>)

